# DailyVictimArchive

./: .gitignore  .htaccess  .tidyallrc  Build.hs  Dockerfile  Makefile  README.md  _article  _config.dev.yml  _config.yml  _depends  _dv  _update  alpha.pl  alpha_done.pl  alpha_shape.c  article.pl  articlefm.py  build  composite.pl  config.toml  dag.pl  depends  deploy.sh  gnu.plot  gs_shared.pl  ids.mk  img  index.html  loaddb.pl  plot.pl  poly.pl  sample.pl  shakefile.cabal  stack.yaml  stage  tiles
_article/: 10.md  101.md  103.md  106.md  107.md  108.md  109.md  11.md  112.md  113.md  114.md  116.md  117.md  120.md  121.md  123.md  125.md  126.md  128.md  130.md  137.md  138.md  142.md  145.md  146.md  147.md  149.md  15.md  150.md  151.md  153.md  154.md  155.md  156.md  16.md  160.md  161.md  162.md  163.md  165.md  (+315 more)
_includes/: footer.html  head.html  header.html  link.html
_layouts/: article.html  default.html  map.html  meta.html
_map/: graph.md  reunion.md
_meta/: 2000-10-02-how-does-it-work.md  2000-10-02-who-makes-this-thing.md  2001-02-01-anatomy-of-a-daily-victim.md  2001-07-30-top-10-daily-victims.md  2002-03-01-how-does-it-work.md  2002-03-01-the-artist-and-the-madman.md  2009-02-06-excerpt-from-fargo-fond-farewell.md
_plugins/: article_filter.rb  collections.rb
_sass/: custom.scss  layout.scss
_scripts/: alpha.py  alpha_done.pl  alpha_done.py  articlefm.py  composite.pl  create_tiles.pl  dag.pl  loaddb.pl  loaddb.py  metafm.py  plot.pl  plot.py  poly.pl  redirects.py  updatefm.py  vote.pl
alpha_data/: 129.alpha  137.alpha  148.alpha  (+79 more)
(+1160 files in other folders)
